Bug 399340 - "Brush Presets" docker and "Choose brush preset" dialog not synced
Summary: "Brush Presets" docker and "Choose brush preset" dialog not synced
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-03 15:39 UTC by mvowada
Modified: 2018-10-10 09:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video (1.24 MB, video/mp4)
2018-10-03 15:39 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-10-03 15:39:50 UTC
Created attachment 115384 [details]
Video

(Ubuntu 14.04 - Krita 4.2.0-pre-alpha (git 278e429))
Steps:

    1. fresh configs
    2. start
    3. "Brush Presets" docker > pick a different preset
    4. CTRL+W (close)
    5. CTRL+N (new)

Actual Results: "Brush Presets" docker and "Choose brush preset" list not synced (see video)
Comment 1 Halla Rempt 2018-10-09 12:13:58 UTC
Git commit cacb932322dbec056af869ed424d212ba76761db by Boudewijn Rempt.
Committed on 09/10/2018 at 12:13.
Pushed by rempt into branch 'master'.

Reset the brush preset docker's current preset on creating a new document

M  +3    -2    plugins/dockers/presetdocker/presetdocker_dock.cpp
M  +1    -3    plugins/dockers/presetdocker/presetdocker_dock.h

https://commits.kde.org/krita/cacb932322dbec056af869ed424d212ba76761db
Comment 2 Halla Rempt 2018-10-10 09:57:20 UTC
Git commit 6073432833ff65456bcaf8618de3a7abcd1a8a83 by Boudewijn Rempt.
Committed on 10/10/2018 at 07:43.
Pushed by rempt into branch 'krita/4.1'.

Reset the brush preset docker's current preset on creating a new document
(cherry picked from commit cacb932322dbec056af869ed424d212ba76761db)

M  +3    -2    plugins/dockers/presetdocker/presetdocker_dock.cpp
M  +1    -3    plugins/dockers/presetdocker/presetdocker_dock.h

https://commits.kde.org/krita/6073432833ff65456bcaf8618de3a7abcd1a8a83