Reset the brush preset docker's current preset on creating a new document

BUG:399340